c4prj2_input/grade.txt
Grading at Tue Sep  4 19:51:32 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:41:41: error: request for member ‘cards’ in something not a structure or union
       fc->decks[i].cards[j]->suit = deck.cards[i]->suit;
                                         ^
future.c:42:42: error: request for member ‘cards’ in something not a structure or union
       fc->decks[i].cards[j]->value = deck.cards[i]->value;
                                          ^
Compilation of future.c failed

Overall Grade: F
